welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value presence
	if(presence = 1){
           ^Program:14: error: not found: type int
	var presence : int = 0;
                       ^